feat: Implementação de processamento específico por turma e melhorias no fluxo de detecção
🎯 PRINCIPAIS MELHORIAS:

✨ Novos Recursos:
- Seleção manual do tipo de cartão no início do processamento (44 ou 52 questões)
  * Remove detecção automática propensa a erros
  * Interface interativa para escolha do usuário

- Integração com Google Drive e Sheets por turma
  * Pasta dedicada para 5º ano (44 questões)
  * Pasta dedicada para 9º ano (52 questões)
  * Planilhas separadas por turma (5º e 9º ano)
  * Roteamento automático baseado no tipo de cartão selecionado

- Suporte completo a arquivos PDF
  * Conversão automática de cada página do PDF em imagem
  * Processamento individual de cada página como cartão-resposta
  * Mantém fluxo de trabalho idêntico ao de imagens

🔒 Validações Implementadas:
- Validação rigorosa de questões detectadas
  * Cartões com detecção incompleta não são enviados à planilha
  * Exemplo: Selecionado 52 questões, detectado 51 → não envia
  * Previne dados incompletos no sistema

🎨 Otimizações de Algoritmo:
- Fórmulas matemáticas específicas por tipo de gabarito
  * Dimensionamento otimizado para 52 questões (9º ano)
  * Dimensionamento otimizado para 44 questões (5º ano)
  * Maior precisão na detecção de bolhas preenchidas

🧹 Melhorias de UX:
- Remoção de outputs verbosos de debug
  * Conversão de PDF (páginas individuais)
  * Conversão para preto e branco
  * Detecções individuais de questões
  * Estatísticas de bolhas e respostas Gemini
  * Interface mais limpa e profissional

⚠️ LIMITAÇÕES CONHECIDAS:
- Qualidade de detecção depende de:
  * Qualidade da digitalização/foto
  * Centralização da folha no scan
  * Ausência de distorções angulares

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,61 @@
-# Processamento de imagens e OCR
-opencv-python
-pillow
-pytesseract
-numpy
-scikit-learn
+# ============================================
+# SISTEMA DE CORREÇÃO DE CARTÕES-RESPOSTA OMR
+# ============================================
 
-# Google APIs
-gspread
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
-google-generativeai
+# ────────────────────────────────────────────
+# Processamento de Imagens e OCR
+# ────────────────────────────────────────────
+opencv-python>=4.8.0        # Visão computacional e detecção OMR
+pillow>=10.0.0             # Manipulação de imagens
+pytesseract>=0.3.10        # OCR para extração de texto
+numpy>=1.24.0              # Arrays e operações numéricas
+scikit-learn>=1.3.0        # K-means clustering para detecção
 
-# Processamento de PDF
-PyMuPDF
-pdf2image
+# ────────────────────────────────────────────
+# Google APIs - Drive e Sheets
+# ────────────────────────────────────────────
+gspread>=5.11.0                    # API Google Sheets
+google-auth>=2.23.0                # Autenticação Google
+google-auth-oauthlib>=1.1.0        # OAuth2 flow
+google-auth-httplib2>=0.1.1        # HTTP library para Google Auth
+google-api-python-client>=2.100.0  # API Google Drive
 
+# ────────────────────────────────────────────
+# Google AI - Gemini (extração de cabeçalho)
+# ────────────────────────────────────────────
+google-generativeai>=0.3.0   # API Gemini para OCR avançado
+
+# ────────────────────────────────────────────
+# Processamento de PDFs
+# ────────────────────────────────────────────
+pdf2image>=1.16.3          # Conversão PDF → PNG (requer Poppler)
+# PyMuPDF>=1.23.0          # Alternativa (não usado atualmente)
+
+# ────────────────────────────────────────────
 # Utilitários
-requests
+# ────────────────────────────────────────────
+python-dotenv>=1.0.0       # Variáveis de ambiente (.env)
+requests>=2.31.0           # Requisições HTTP (opcional)
 
-#Variável de ambiente
-python-dotenv
+# ────────────────────────────────────────────
+# NOTAS DE INSTALAÇÃO:
+# ────────────────────────────────────────────
+# 1. Poppler (para processar PDFs):
+#    ✅ Instalação AUTOMÁTICA via código!
+#    O script detecta se o Poppler não está instalado e
+#    oferece instalação automática ao processar o primeiro PDF.
+#    
+#    Caminho de instalação: C:\poppler\Library\bin
+#
+# 2. Tesseract OCR (OBRIGATÓRIO para OCR):
+#    Windows: https://github.com/UB-Mannheim/tesseract/wiki
+#    Instalar e adicionar ao PATH
+#
+# 3. Instalar dependências:
+#    pip install -r requirements.txt
+#
+# 4. Configurar credenciais Google:
+#    - Criar projeto no Google Cloud Console
+#    - Ativar APIs: Drive, Sheets, Gemini
+#    - Baixar credenciais JSON
+#    - Criar arquivo .env com tokens
